# torchmimic

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE.md  README.md  SAnD.py  batch_gen.py  data.py  main.py  makefile  model.py  modules.py  parser.py  preprocessing.py  pyproject.toml  readers.py  requirements.txt  setup.py  utils.py
.github/workflows/: test-basic.yaml
docs/: requirements.txt
docs/source/: conf.py  data.rst  index.rst  loggers.rst  metrics.rst  models.rst
exp/exp/scripts/: main.py  model.py  parser.py
tests/: test_standard_lstm.py
torchmimic/: __init__.py  benchmarks.py  metrics.py  preprocessing.py  utils.py
torchmimic/benchmarks/: __init__.py
torchmimic/benchmarks/decompensation/: decompensation_benchmark.py  utils.py
torchmimic/benchmarks/ihm/: ihm_benchmark.py  utils.py
torchmimic/benchmarks/los/: los_benchmark.py  utils.py
torchmimic/benchmarks/phenotyping/: phenotyping_benchmark.py  utils.py
torchmimic/data/: __init__.py  base_dataset.py  preprocessing.py  readers.py  utils.py
torchmimic/data/decompensation/: dataset.py
torchmimic/decompensation/: __init__.py  batch_gen.py  train_decompensation.py  utils.py
torchmimic/loggers/: __init__.py  base_logger.py  decompensation.py  ihm.py  los.py  phenotyping.py
torchmimic/los/: __init__.py  batch_gen.py  train_los.py  utils.py
torchmimic/models/: LSTM.py  __init__.py  lstm.py
torchmimic/mortality/: __init__.py  train_mortality.py  utils.py
torchmimic/multitask/: train_multitask.py
torchmimic/phenotyping/: train_phenotyping.py
torchmimic_dev/: pyvenv.cfg
(+7 files in other folders)
