[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py37", "py39"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py39
[testenv]
PYTHONPATH = {toxinidir}
changedir = {envtmpdir}
deps = pytest
commands=
    echo $PYTHON_PATH
    python -m pytest {toxinidir}/tests/ -s
"""